* Changelog

All notable changes to this project will be documented in this file.

** <2019-11-27 Wed>

*** Added

    - Instructions on configuring Nextcloud+haproxy to allow WebDAV
    - Documentation on how to share from Nextcloud using WebDAV
    - Thank you [[https://github.com/runejuhl][runejuhl]] for your [[https://github.com/200ok-ch/organice/pull/122][PR]]!

** <2019-11-25 Mon>

*** Added
    - Honor the 'nologrepeat' option
      - It can be set via =#+STARTUP:= or as a property
      - Thank you [[https://github.com/jamesnvc][@jamesnvc]] for your [[https://github.com/200ok-ch/organice/pull/119][PR]]!

** <2019-11-22 Fri>

*** Fixed

    - Handle non-clock entries in =:LOGBOOK:= drawers
      - Fixes [[https://github.com/200ok-ch/organice/issues/111][issue #111]], [[https://github.com/200ok-ch/organice/issues/108][issue #108]] and [[https://github.com/200ok-ch/organice/issues/110][issue #110]]
      - Thank you [[https://github.com/jamesnvc][@jamesnvc]] for your [[https://github.com/200ok-ch/organice/pull/112][PR]]!

** <2019-11-21 Thu>

*** Fixed

    - Safeguard against potential Dropbox SDK Bug
      - More information in [[https://github.com/200ok-ch/organice/issues/108][issue #108]]

** <2019-11-19 Tue>

*** Changed

    - Don't put newlines after headers with no content, add newline at EOF
      - Thank you [[https://github.com/jamesnvc][@jamesnvc]] for your [[https://github.com/200ok-ch/organice/pull/106][PR]]!

** <2019-11-14 Thu>

*** Added

    - *Clocking work time*
      - Org mode allows you to clock the time you spend on specific
        tasks in a project:
        https://orgmode.org/manual/Clocking-Work-Time.html#Clocking-Work-Time
      - organice is compatible with logbook clocking, now
      - You can 'clock in' and 'clock out' to a header
      - Thank you [[https://github.com/jamesnvc][@jamesnvc]] for your [[https://github.com/200ok-ch/organice/pull/103][PR]]!

** <2019-10-31 Thu>

*** Fixed